--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "BlankE",
-  "description": "Attempt at simple text editor",
+  "name": "Unnanounced",
+  "description": "another thing",
   "repository": {
     "type": "git",
     "url": "git://github.com/xharris/texteditor.git"
@@ -31,7 +31,7 @@
     "grunt-contrib-less": "^1.3.0"
   },
   "build": {
-    "appID": "BlankE",
+    "appID": "Unnanounced",
     "app-category-type": "public.app-category.developer-tools",
     "win": {
       "iconURL": "https://raw.githubusercontent.com/xharris/texteditor/master/src/build/icon.ico"
