--- a/src/package.json
+++ b/src/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Unnanounced",
+  "name": "gamething",
   "description": "another thing",
   "repository": {
     "type": "git",
@@ -23,6 +23,7 @@
     "image-size": "^0.4.0",
     "less": "^2.7.1",
     "mdi": "^1.6.50",
+    "mkdirp": "^0.5.1",
     "rimraf": "^2.5.4"
   },
   "devDependencies": {
@@ -31,7 +32,7 @@
     "grunt-contrib-less": "^1.3.0"
   },
   "build": {
-    "appID": "Unnanounced",
+    "appID": "gamething",
     "app-category-type": "public.app-category.developer-tools",
     "win": {
       "iconURL": "https://raw.githubusercontent.com/xharris/texteditor/master/src/build/icon.ico"
