--- a/src/engines/phaser/package.json
+++ b/src/engines/phaser/package.json
@@ -1,4 +1,8 @@
 {
   "name": "phaser",
-  "main": "phaser.js"
+  "main": "phaser.js",
+  "dependencies": {
+    "connect": "^3.5.0",
+    "serve-static": "^1.11.1"
+  }
 }
