--- a/src/package.json
+++ b/src/package.json
@@ -24,6 +24,7 @@
     "less": "^2.7.1",
     "mdi": "^1.6.50",
     "mkdirp": "^0.5.1",
+    "open": "0.0.5",
     "rimraf": "^2.5.4"
   },
   "devDependencies": {
