bugfix-love2d: class variables no longer shared across instances

--- a/src/settings.json
+++ b/src/settings.json
@@ -11,5 +11,14 @@
 			"shape" : "rectangle",
 			"function" : "b_project.openProjectDir()"
 		}
+	],
+
+	"appearance" : [
+		{
+			"type" : "button",
+			"name" : "shuffle IDE color",
+			"shape" : "rectangle",
+			"function" : "b_library.randomizeBackColor()"
+		}
 	]
 }
