--- a/src/package.json
+++ b/src/package.json
@@ -9,7 +9,7 @@
   "author": "Xavier Harris <xhh950@gmail.com> (http://xhhstuff.me)",
   "license": "CC-BY-NC-SA-4.0",
   "scripts": {
-    "start": "grunt && electron .",
+    "start": "grunt && electron . --dev",
     "release": "npm run clean_modules && npm run asar",
     "asar": "asar pack \"../src\" \"../releases/BlankE-win32-ia32/resources/app.asar\" --unpack-dir \"**/engines/**\"",
     "clean_modules": "npm prune --production"
@@ -18,6 +18,7 @@
     "plugin": true
   },
   "dependencies": {
+    "cryptr": "^2.0.0",
     "electron-cookies": "^1.1.0",
     "fs-extra": "^0.26.7",
     "getmac": "^1.2.1",
