--- a/src/package.json
+++ b/src/package.json
@@ -10,7 +10,7 @@
   "license": "CC-BY-NC-SA-4.0",
   "scripts": {
     "start": "grunt && electron . --dev",
-    "release": "npm run clean_modules && npm run asar && npm install",
+    "release": "grunt && npm run clean_modules && npm run asar && npm install",
     "asar": "asar pack \"../src\" \"../releases/BlankE-win32-ia32/resources/app.asar\" --unpack-dir \"**/engines/**\"",
     "clean_modules": "npm prune --production"
   },
