--- a/src/package.json
+++ b/src/package.json
@@ -10,10 +10,13 @@
   "license": "CC-BY-NC-SA-4.0",
   "scripts": {
     "start": "grunt && electron . --dev",
-    "release": "grunt && npm run clean_modules && npm run asar && npm install",
     "asar": "asar pack \"../src\" \"../releases/BlankE-win32-ia32/resources/app.asar\" --unpack-dir \"**/{engines}\"",
     "clean_modules": "npm prune --production",
-    "release-mac": "grunt && node release.js"
+
+    "setup": "node setup.js",
+    "release": "grunt && node release.js",
+    
+    "release-old": "grunt && npm run clean_modules && npm run asar && npm install"
   },
   "webkit": {
     "plugin": true
@@ -36,7 +39,7 @@
   },
   "devDependencies": {
     "electron": "0.4.1",
-    "electron-package": "^0.1.0",
+    "electron-packager": "^8.7.1",
     "grunt": "^1.0.1",
     "grunt-contrib-less": "^1.3.0"
   },
