--- a/src/package.json
+++ b/src/package.json
@@ -10,13 +10,11 @@
   "license": "CC-BY-NC-SA-4.0",
   "scripts": {
     "start": "grunt && electron . --dev",
-    "asar": "asar pack \"../src\" \"../releases/BlankE-win32-ia32/resources/app.asar\" --unpack-dir \"**/{engines}\"",
+    "asar": "asar pack \"../src\" \"../releases/BlankE-win32-x64/resources/app.asar\" --unpack-dir \"**/{engines}\"",
     "clean_modules": "npm prune --production",
-
     "setup": "node setup.js",
     "release": "grunt && node release.js",
-    
-    "release-old": "grunt && npm run clean_modules && npm run asar && npm install"
+    "release-win": "grunt && npm run clean_modules && npm run asar && npm install"
   },
   "webkit": {
     "plugin": true
