--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,1 @@
-node_modules
-releases
-release
-BUILDS
-temp
-locales
-cache
-build
-this.sublime-project
-this.sublime-workspace
-npm-debug.log
-test_resources
-BlankE-darwin-x64
-*.command
-love.*
-Makefile
-dist
+notprojects
