--- a/src/ide.cfg
+++ b/src/ide.cfg
@@ -1,4 +1,4 @@
 [root]
-use_external_editor = True
+use_external_editor = False
 love2d_path = C:/Users/XHH/Documents/PROJECTS/blanke4/love2d-win32
 
