bugfix: bad indentation in run()

--- a/src/ide.cfg
+++ b/src/ide.cfg
@@ -1,4 +1,5 @@
 [root]
 use_external_editor = False
+last_project = C:/Users/XHH/Documents/PROJECTS/blanke4/src/projects/engine_project
 love2d_path = C:/Users/XHH/Documents/PROJECTS/blanke4/love2d-win32
 
